--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.0",
+    "masonry-simple": "^3.2.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
   }
