--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^3.1.8",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.6",
     "masonry-simple": "^3.2.1",
